--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 1. Create DB user on server
 2. Create config.php (DONT ADD IT TO REPO) that would have the DB user config
 3. Create DB tables
-4. Code bot
+4. Add to spec, adding a tournament leaderboard
+5. Code bot
+
